# localml

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docs.yml  release.yml  zizmor.yml
docs/: design.md  getting-started.md  index.md  openapi.json
docs/reference/: api.md  index.md
examples/: quickstart.py
notebooks/: predict_eval_loop.ipynb  quickstart.ipynb
scripts/: export_openapi.py  reset.py  seed.py
services/api/: requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_control_plane.py  0002_prompt_registry.py  0003_prediction_jobs.py  0004_evaluation_prediction_link.py  0005_deployment_serving.py
services/api/app/: __init__.py  auth.py  background.py  comparison.py  config.py  db.py  evaluation.py  inference.py  integrations.py  lifecycle.py  main.py  prediction.py  queue.py  repositories.py  schemas.py  serving.py  session.py  store.py  templating.py  worker.py
services/api/app/routers/: compare.py  datasets.py  deployments.py  evaluations.py  models.py  predictions.py  projects.py  prompts.py  resolve.py  runs.py
services/mlflow/: Dockerfile
services/worker/: evaluator.py  requirements.txt  worker.py
src/localml/: __init__.py  _hashing.py  _polling.py  _state.py  cli.py  client.py  config.py  dashboard.py  datasets.py  evals.py  exceptions.py  huggingface.py  jax.py  mlx.py  ops.py  prompts.py  providers.py  run.py  torch.py  types.py
src/localml/adapters/: __init__.py  base.py
tests/: conftest.py  test_adapters.py  test_api.py  test_cli.py  test_compare.py  test_contract.py  test_dashboard.py  test_evaluations.py  test_lifecycle.py  test_openapi_schema.py  test_predictions.py  test_prompts.py  test_sdk.py  test_sdk_integration.py  test_serving.py
