[project]
name = "localml"
version = "0.1.0"
description = "Local ML experimentation platform demo SDK and control plane"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Guenevere Prawiroatmodjo" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.12",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "redis>=5.0",
    "boto3>=1.34",
    "mlflow>=2.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
localml = "localml.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "services", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["localml"]
